<resources>
    <string name="app_name">RecipeCreator App</string>
    <string name="login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="err_msg_enter_email">Please Enter Email</string>
    <string name="err_msg_enter_password">Please Enter Your Password</string>
    <string name="signUp">SignUp</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="err_enter_name">Please enter your name</string>
    <string name="register_success">You are registered Successfully</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_recipe">Recipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_dashboard_item_found">No item found!</string>
    <string name="title_recipe_details">RECIPE DETAILS</string>
    <string name="content_description">image</string>
    <string name="lbl_recipe_process">Recipe Process</string>
    <string name="recipe_category">Category</string>
    <string name="title_recipes">Recipes</string>
    <string name="no_recipes_found">No recipes created yet!</string>
    <string name="recipe_delete_success_message">Your recipe deleted successfully</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the recipe?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_add_recipe">Add Recipe</string>
    <string name="title_add_recipe">ADD RECIPE</string>
    <string name="et_hint_recipe_title">Recipe Title</string>
    <string name="et_hint_recipe_category">Recipe Category</string>
    <string name="et_hint_recipe_description">Recipe Process</string>
    <string name="btn_lbl_submit">SUBMIT</string>
    <string name="err_msg_select_recipe_image">Please select recipe image.</string>
    <string name="err_msg_enter_recipe_title">Please enter recipe title.</string>
    <string name="err_msg_enter_recipe_category">Please enter product category.</string>
    <string name="err_msg_enter_recipe_description">Please enter recipe description.</string>
    <string name="recipe_uploaded_success_message">Your recipe was uploaded successfully.</string>
    <string name="no_recipe_added_yet">No recipe added yet!</string>
    <string name="read_storage_permission_denied">Oops you just denied the permission for camera.You can allow it in settings.</string>
    <string name="google_places_api_key">GOOGLE_PLACES_API_KEY</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
</resources>