<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddRecipeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_recipe_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/tv_title_add_recipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="-5dp"
            android:text="@string/title_add_recipe"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_recipe_activity" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:id="@+id/fl_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <ImageView
                    android:id="@+id/iv_recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorImageViewBackground"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/iv_add_update_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:contentDescription="@string/content_description"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="16dp"
                    android:src="@drawable/ic_vector_add_photo" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_recipe_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_recipe_title"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_recipe_image" >

                <EditText
                    android:id="@+id/et_recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/recipe_details_textSize_title" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_recipe_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_recipe_category"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_recipe_title" >

                <EditText
                    android:id="@+id/et_recipe_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/recipe_details_textSize_title" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_recipe_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_recipe_description"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_recipe_category" >

                <EditText
                    android:id="@+id/et_recipe_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:padding="16dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/recipe_details_textSize_title" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit_add_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity = "center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background_login"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/btn_lbl_submit"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_recipe_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>