<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RecipeDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_recipe_details_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="-5dp"
            android:paddingEnd="0dp"
            android:text="@string/title_recipe_details"
            android:textColor="#F8F8F8"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_recipe_details_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_recipe_detail_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#E1E1E1"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_recipe_details_title_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#F3F3F3"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_recipe_detail_image">

                <TextView
                    android:id="@+id/tv_recipe_details_title"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/recipe_details_textSize_title"
                    tools:text="Recipe Title" />

                <TextView
                    android:id="@+id/tv_recipe_details_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/recipe_details_textSize"
                    tools:text="$100" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_recipe_details_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/recipe_details_textSize_title"
                android:text="@string/lbl_recipe_process"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/recipe_details_textSize_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_recipe_details_title_price" />

            <TextView
                android:id="@+id/tv_recipe_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/recipe_details_textSize_title"
                android:layout_marginEnd="@dimen/recipe_details_textSize_title"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_details_label"
                tools:text="This is the recipe process." />

            <TextView
                android:id="@+id/tv_recipe_category_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/recipe_details_textSize_title"
                android:text="@string/recipe_category"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/recipe_details_textSize_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_details_description"/>

            <TextView
                android:id="@+id/tv_recipe_selected_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/recipe_details_textSize_title"
                android:layout_marginEnd="@dimen/recipe_details_textSize_title"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_category_label"
                tools:text="Breakfast" />
        </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
